# OLCJAM2022

./: .clang-format  CMakeLists.txt  LICENSE.txt  README.txt  formatwithclang.py  listsrc.py
assets/: deer1.qoi  deer2.qoi  deer3.qoi  deer4.qoi  devmap.txt  logotip.qoi  spritesheettest.qoi  sun_base.qoi  sun_face.qoi  test.txt  testlevel.txt
assets/levels/: level3.txt
assets_sources/: aaaa.pdn  background.xcf  convert.bat  cover.xcf  deer1.xcf  deer2.xcf  deer3.xcf  deer4.xcf  ending.pdn  ending_v2.pdn  fire.c  fire.h  fire.xcf  happydeernoise.aup3  sun.xcf  text.xcf
src/: animal.cpp  animal.hpp  animalsafetrigger.hpp  animalsafezone.hpp  building_part.hpp  camera.cpp  camera.hpp  cloud.cpp  cloud.hpp  constants.hpp  delaunator.hpp  gradient_fire.h  imguidebugdraw.cpp  leveldata.hpp  main.cpp  overlapcheck.hpp  particlestructs.hpp  physicsentity.cpp  physicsentity.hpp  scene_level.hpp  scene_mainemenu.hpp  scene_win.hpp  statemanagement.hpp  sun.cpp  sun.hpp  terrain.hpp  unit.cpp  unit.hpp
submodules/: .gitignore  CMakeLists.txt
