#add_subdirectory(box2d-2.4.1)
#target_link_libraries(main box2d)
#target_include_directories(main PRIVATE box2d-2.4.1/include)

set(BOX2D_BUILD_STATIC TRUE)
set(BOX2D_BUILD_SHARED FALSE)
set(BOX2D_VERSION "PURP")
add_subdirectory(Box2D)
target_include_directories(main PRIVATE Box2D)
target_include_directories(main PRIVATE .)
target_link_libraries(main Box2D)